fixed the display bug, bug the texture of model have some problem to dispaly!

--- a/shaders.qrc
+++ b/shaders.qrc
@@ -18,5 +18,7 @@
         <file>textures/container2_specular.png</file>
         <file>shaders/modelLoad.fs</file>
         <file>shaders/modelLoad.vs</file>
+        <file>shaders/cubeTest.fs</file>
+        <file>shaders/cubeTest.vs</file>
     </qresource>
 </RCC>
