add the line mode check box!

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -67,8 +67,21 @@
        </size>
       </property>
       <property name="title">
-       <string>GroupBox</string>
+       <string>参数设置</string>
       </property>
+      <widget class="QCheckBox" name="checkBox">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>238</y>
+         <width>81</width>
+         <height>41</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>线框模式</string>
+       </property>
+      </widget>
      </widget>
     </item>
    </layout>
